# genprompt

./: LICENSE  README.md  genprompt.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
