name:                genprompt
version:             0.0.1.0
synopsis:            fill a type by prompting the user for data
description:         Please see README.md
homepage:            https://github.com/olldray/genprompt
license:             AllRightsReserved
author:              Thomas Allen
maintainer:          olldray@gmail.com
copyright:           2016 Thomas Allen
category:            Generics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  build-depends:       base >= 4.7 && < 5
                     , hashable

  default-language:    Haskell2010

executable genprompt-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:       base
                     , genprompt
                     , turtle
                     , text
                     , foldl
  default-language:    Haskell2010

test-suite genprompt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genprompt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/olldray/genprompt
